2009-11-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	- added color cancel button.

	* src/Makefile.am:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/disp_holder.cpp:
	* src/field_canvas.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- supported DrawInfoT (tentative).
	- added the menu to toggle full screen.

	* src/draw_info_painter.cpp:
	* src/draw_info_painter.h:
	* src/angle_deg.h:
	* src/ball_painter.h:
	* src/circle_2d.h:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/disp_holder.cpp:
	* src/disp_holder.h:
	* src/field_canvas.cpp:
	* src/mouse_state.h:
	* src/options.cpp:
	* src/options.h:
	* src/player_painter.cpp:
	* src/player_painter.h:
	* src/player_type_dialog.h:
	* src/rcsslogplayer/parser.cpp:
	* src/score_board_painter.h:
	* src/team_graphic.h:
	* src/team_graphic_painter.h:
	* src/vector_2d.h:
	- fixed include guard.
	- added DrawInfoPainter, but not actually used yet.

	* src/player_type_dialog.cpp:
	* src/player_type_dialog.h:
	* src/Makefile.am:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/field_canvas.cpp:
	* src/field_canvas.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- added PlayerTypeDialog.
	- implemented playmode change menu.

2009-11-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/ball_painter.cpp:
	* src/ball_painter.h:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/field_painter.cpp:
	* src/field_painter.h:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/options.h:
	* src/player_painter.cpp:
	* src/player_painter.h:
	* src/score_board_painter.cpp:
	* src/score_board_painter.h:
	- added a color setting panel.

	* src/ball_painter.cpp:
	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/field_canvas.cpp:
	* src/field_canvas.h:
	* src/field_painter.cpp:
	* src/options.cpp:
	* src/options.h:
	* src/player_painter.cpp: