@@ -1,3 +1,10 @@
+2009-11-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/options.cpp:
+	* src/player_painter.cpp:
+	* src/player_type_dialog.cpp:
+	- added minimum catch area information.
+
 2009-11-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/config_dialog.cpp:
